# subtracker

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  commitlint.config.js  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  package.json  pyproject.toml  requirements.txt
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_exchange_rate.py  003_add_last_notified_date.py  004_add_system_settings.py  005_add_asset_types.py  006_add_groups_and_group_access.py
backend/scripts/: clear_audit_test_data.py  run_notifications.py  seed_admin.py
backend/src/api/: config.py  dependencies.py  exception_handlers.py  main.py
backend/src/domain/: exceptions.py
backend/tests/integration/: conftest.py  test_auth_endpoints.py  test_subscription_endpoints.py
backend/tests/unit/: helpers.py  test_accept_invite_use_case.py  test_asset_type_entity.py  test_asset_type_repository_interface.py  test_asset_type_use_cases.py  test_audit_log_repository_interface.py  test_base_repository.py  test_base_schemas.py  test_base_service.py  test_batch_renew_subscriptions_use_case.py  test_check_and_notify_use_case.py  test_create_payment_record_use_case.py  test_create_subscription_use_case.py  test_create_user_use_case.py  test_csrf.py  test_delete_payment_record_use_case.py  test_delete_subscription_use_case.py  test_delete_user_use_case.py  test_direct_password_reset_use_case.py  test_exception_handlers.py  test_exceptions.py  test_health.py  (+17 more)
(+298 files in other folders)
